@@ -104,14 +104,6 @@ struct pdo_pgsql_lob_self {
 	Oid oid;
 };
 
-enum pdo_pgsql_specific_constants {
-	PGSQL_TRANSACTION_IDLE = PQTRANS_IDLE,
-	PGSQL_TRANSACTION_ACTIVE = PQTRANS_ACTIVE,
-	PGSQL_TRANSACTION_INTRANS = PQTRANS_INTRANS,
-	PGSQL_TRANSACTION_INERROR = PQTRANS_INERROR,
-	PGSQL_TRANSACTION_UNKNOWN = PQTRANS_UNKNOWN
-};
-
 php_stream *pdo_pgsql_create_lob_stream(zend_object *pdh, int lfd, Oid oid);
 extern const php_stream_ops pdo_pgsql_lob_stream_ops;
 
